# cloudcoil

./: .gitignore  404.html  LICENSE  Makefile  README.md  VERSIONING.md  index.html  pyproject.toml
.github/workflows/: ci.yml  test_pypi_publish.yml  update_repos.yml
api/: index.html
cloudcoil/: _decorators.py  resources.py  scheme.py
cloudcoil/caching/: __init__.py  _cache.py  _cached_client.py  _event_dispatcher.py  _factory.py  _informer.py  _store.py  _sync_informer.py  _types.py  _watch_manager.py
cloudcoil/client/: _api_client.py  _config.py  _resource.py
cloudcoil/codegen/: import_rewriter.py  parser.py
cloudcoil/models/kubernetes/core/: v1.py
cookiecutter/: cookiecutter.json
cookiecutter/hooks/: post_gen_project.sh
cookiecutter/models-{{ cookiecutter.model_name }}/: Makefile  pyproject.toml
cookiecutter/models-{{ cookiecutter.model_name }}/.github/workflows/: update_releases.yml
cookiecutter/models-{{ cookiecutter.model_name }}/tests/: test_import.py
models/fluxcd/: README.md
models/istio/: README.md
models/kubernetes/: README.md
models/prometheus-operator/: README.md  pyproject.toml
search/: search_index.json
tests/: test_async_e2e.py  test_cloudcoil.py  test_codegen.py  test_config.py  test_e2e.py  test_informers.py  test_informers_edge_cases.py  test_resource_e2e.py  test_sync_e2e.py  test_utils.py
tests/data/: k8s-swagger.json
