[project]
name = "cloudcoil"
version = "0.0.0"
description = "Cloud native made easy with Python"
authors = [{ name = "Sambhav Kothari", email = "sambhavs.email@gmail.com" }]
maintainers = [{ name = "Sambhav Kothari", email = "sambhavs.email@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>2.0",
    "httpx",
    "pyyaml>=6.0.2",
    "typing_extensions>=4.0.0; python_version <= '3.10'",
]
keywords = ["cloud-native", "kubernetes", "pydantic", "python", "async"]
[project.optional-dependencies]
test = ["pytest"]


[project.urls]
Homepage = "https://github.com/cloudcoil/cloudcoil"
Documentation = "https://cloudcoil.github.io/cloudcoil"
Repository = "https://github.com/cloudcoil/cloudcoil"
Issues = "https://github.com/cloudcoil/cloudcoil/issues"
Changelog = "https://github.com/cloudcoil/cloudcoil/releases"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "N", # pep8-naming
    "I", # isort
]
ignore = ["E203", "B008", "N818", "E501", "B904"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=cloudcoil --cov-report=term-missing --cov-report=xml -vvv --junitxml=junit.xml -o junit_family=legacy"
markers = ["configure_test_cluster: Configure cloudcoil test cluster"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
    "mypy",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-autorefs>=0.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mkdocs-autorefs",
    "datamodel-code-generator[http]",
    "types-pyyaml>=6.0.12.20241221",
    "ipython>=8.12.3",
    "pytest-sugar>=1.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']

# Add the pytest plugin
[project.entry-points.pytest11]
cloudcoil = "cloudcoil._testing.plugin"

[tool.coverage.run]
omit = ["cloudcoil/kinds/**"]
source = ["cloudcoil"]
parallel = true
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError()",
    "except ImportError",
    "_yaml = None",
]
precision = 1
skip_covered = true
show_missing = true

[tool.coverage.paths]
source = [
    "cloudcoil",
]
